jobs/assignment/builds/10/log
Started by an SCM change
Running as SYSTEM
Building in workspace /var/lib/jenkins/workspace/assignment
The recommended git tool is: NONE
No credentials specified
 > git rev-parse --resolve-git-dir /var/lib/jenkins/workspace/assignment/.git # timeout=10
Fetching changes from the remote Git repository
 > git config remote.origin.url https://github.com/akkimendon/test.git # timeout=10
Fetching upstream changes from https://github.com/akkimendon/test.git
 > git --version # timeout=10
 > git --version # 'git version 2.32.0'
 > git fetch --tags --force --progress -- https://github.com/akkimendon/test.git +refs/heads/*:refs/remotes/origin/* # timeout=10
 > git rev-parse refs/remotes/origin/master^{commit} # timeout=10
Checking out Revision 8027e8f546791b085adcbb4c196257eb0d955c12 (refs/remotes/origin/master)
 > git config core.sparsecheckout # timeout=10
 > git checkout -f 8027e8f546791b085adcbb4c196257eb0d955c12 # timeout=10
Commit message: "Update big.c"
 > git rev-list --no-walk fee885084ae576c4ab3f8eeda71dfdd41d4b5298 # timeout=10
[assignment] $ /bin/sh -xe /tmp/jenkins11786896617043994702.sh
+ cd /var/lib/jenkins/workspace/assignment
+ make
gcc -c big.c
big.c:2:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
 biggest(){
 ^~~~~~~
big.c:40:1: error: expected identifier or ‘(’ before string constant
 "For checking jenkins scm"
 ^~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [big.0] Error 1
Build step 'Execute shell' marked build as failure
Finished: FAILURE
